# fluentui-issue-stats

./: .gitignore  README.md  charts.py  component-charts.py  fluent-issues-monthly.ipynb  fluent-issues.ipynb  generate-images.sh  get-issues.py  issues.py  pyproject.toml  spreadsheets.py
.github/workflows/: weekly-triaged-issues.yml
charts-viewer/: carousel.js  index.html
docs/: charts.md  components.md
spreadsheets/: component_stats.csv  component_stats.xlsx  monthly_stats.csv  monthly_stats.xlsx  overall_issue_stats.csv  overall_issue_stats.xlsx  stats-01.csv  stats-01.xlsx  stats-02.csv  stats-02.xlsx  stats-03.csv  stats-03.xlsx  stats-04.csv  stats-04.xlsx  stats-05.csv  stats-05.xlsx  stats-06.csv  stats-06.xlsx
xsls/: component_stats.xlsx  monthly_stats.xlsx  overall_issue_stats.xlsx
